--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe App</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Recipe App</title>
+        <!-- link CSS -->
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <!-- Header Container -->
+        <header></header>
+        <!-- Main Containt -->
+        <main>
+            <div class="first-slide">
+                <a href="second-slide">
+                    <img src="Group 1.png" alt="NutriPlate">
+                </a>
+            </div>
+        </main>
+        <!-- Footer Container -->
+        <footer></footer>
+    </body>
 </html>
