linked the second slid in the first slide

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Main Containt -->
         <main>
             <div class="first-slide">
-                <a href="second-slide">
+                <a href="second-slide.html">
                     <img src="Group 1.png" alt="NutriPlate">
                 </a>
             </div>
