modified the second slide

--- a/second-slide.html
+++ b/second-slide.html
@@ -14,12 +14,11 @@
         </header>
         <!-- Main Containt -->
         <main>
-            <h1 class="motto upper  ">“Eat Smart. Live Better.”</h1>
-            <p class="description">Healthy Recipe Recommender is a web app that helps you discover add and manage recipes while keeping track of calories and favorites It makes healthy eating simple fun and easy to follow.</p>
-            <div class="images">
-                <img class="img1" src="assets/biryani.png" alt="">
-                <img class="img2" src="assets/salad.png" alt="">
+            <div class="main">
+                <h1 class="motto upper  ">“Eat Smart. Live Better.”</h1>
+                <p class="description">Healthy Recipe Recommender is a web app that helps you discover add and manage recipes while keeping track of calories and favorites It makes healthy eating simple fun and easy to follow.</p>
             </div>
+            <img src="assets/Group 17.svg" alt="">
         </main>
         <!-- Footer Container -->
         <footer>
