fixed the logo on first slide

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <main>
             <div class="first-slide">
                 <a href="second-slide.html">
-                    <img src="assets/Group 1.png" alt="NutriPlate">
+                    <img src="assets/logo.png" alt="NutriPlate">
                 </a>
             </div>
         </main>
