added a button in second slide

--- a/second-slide.html
+++ b/second-slide.html
@@ -17,8 +17,9 @@
             <div class="main">
                 <h1 class="motto upper  ">“Eat Smart. Live Better.”</h1>
                 <p class="description">Healthy Recipe Recommender is a web app that helps you discover add and manage recipes while keeping track of calories and favorites It makes healthy eating simple fun and easy to follow.</p>
+                <a href="main-page.html" class="upper">Get Started <img src="assets/ArrowRightCircle.svg" class="arrow" alt=""></a>
             </div>
-            <img src="assets/Group 17.svg" alt="">
+            <img src="assets/Group 17.svg" class="food-image" alt="">
         </main>
         <!-- Footer Container -->
         <footer>
