added the header in main page

--- a/main-page.html
+++ b/main-page.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main Page</title>
+    <link rel="stylesheet" href="main-page.css">
 </head>
 <body>
-    
+    <header>
+        <div class="head">
+            <div class="text">
+                <h1>Hey Mark,</h1>
+                <p>What would you like to cook today?</p>
+            </div>
+            <div class="image">
+                <img src="assets/Mask group.svg" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
