added almost all the content of the main page

--- a/main-page.html
+++ b/main-page.html
@@ -18,5 +18,39 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="searchbar">
+            <input type="search" class="search" placeholder=" Search by Recipes ">
+        </div>
+        <div class="buttons">
+            <a href="#" class="breakfast">Breakfast</a>
+            <a href="#">Lunch</a>
+            <a href="#">Dinner</a>
+            <a href="#">Desserts</a>
+        </div>
+        <div class="recipes">
+            <div class="r1">
+                <h1>Egg Omelette</h1>
+                <div class="time">
+                    <img src="assets/Clock.svg" alt="">
+                    <p>5-8 MINS</p>
+                </div>
+            </div>
+            <div class="r1 r2">
+                <h1>Pancakes</h1>
+                <div class="time">
+                    <img src="assets/Clock.svg" alt="">
+                    <p>15-20 MINS</p>
+                </div>
+            </div>
+            <div class="r1">
+                <h1>Tacos</h1>
+                <div class="time">
+                    <img src="assets/Clock.svg" alt="">
+                    <p>25-30 MINS</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
