--- a/main-page.html
+++ b/main-page.html
@@ -43,7 +43,7 @@
                     <p>15-20 MINS</p>
                 </div>
             </div>
-            <div class="r1">
+            <div class="r1 r3">
                 <h1>Tacos</h1>
                 <div class="time">
                     <img src="assets/Clock.svg" alt="">
