added the omlette recipe file

--- a/main-page.html
+++ b/main-page.html
@@ -35,6 +35,7 @@
                     <img src="assets/Clock.svg" alt="">
                     <p>5-8 MINS</p>
                 </div>
+                <a href="omlette.html">More details</a>
             </div>
             <div class="r1 r2">
                 <h1>Pancakes</h1>
