added favicon to all the pages

--- a/second-slide.html
+++ b/second-slide.html
@@ -6,6 +6,7 @@
         <title>Recipe App</title>
         <!-- link CSS -->
         <link rel="stylesheet" href="second-slide.css">
+        <link rel="icon" type="image/png" href="assets/logopng.png">
     </head>
     <body>
         <!-- Header Container -->
