--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Recipe App</title>
         <!-- link CSS -->
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="assets/logopng.png">
     </head>
     <body>  
         <!-- Header Container -->
