--- a/omlette.html
+++ b/omlette.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omlette</title>
     <link rel="stylesheet" href="omlette.css">
+    <link rel="icon" type="image/png" href="assets/logopng.png">
 </head>
 
 <body>
