new changes in main page anchor tag in heading and timming

--- a/main-page.html
+++ b/main-page.html
@@ -1,58 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
-    <link rel="stylesheet" href="main-page.css">
-    <link rel="icon" type="image/png" href="assets/logopng.png">
-</head>
-<body>
-    <header>
-        <div class="head">
-            <div class="text">
-                <h1>Hey Mark,</h1>
-                <p>What would you like to cook today?</p>
-            </div>
-            <div class="image">
-                <img src="assets/Mask group.svg" alt="">
-            </div>
-        </div>
-    </header>
-    <main>
-        <div class="searchbar">
-            <input type="search" class="search" placeholder=" Search by Recipes ">
-        </div>
-        <div class="buttons">
-            <a href="#" class="breakfast">Breakfast</a>
-            <a href="#">Lunch</a>
-            <a href="#">Dinner</a>
-            <a href="#">Desserts</a>
-        </div>
-        <div class="recipes">
-            <div class="r1">
-                <h1>Egg Omelette</h1>
-                <div class="time">
-                    <img src="assets/Clock.svg" alt="">
-                    <p>5-8 MINS</p>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Main Page</title>
+        <link rel="stylesheet" href="main-page.css">
+        <link rel="icon" type="image/png" href="assets/logopng.png">
+    </head>
+    <body>
+        <header>
+            <div class="head">
+                <div class="text">
+                    <h1>Hey Mark,</h1>
+                    <p>What would you like to cook today?</p>
                 </div>
-                <a href="omlette.html">More details</a>
-            </div>
-            <div class="r1 r2">
-                <h1>Pancakes</h1>
-                <div class="time">
-                    <img src="assets/Clock.svg" alt="">
-                    <p>15-20 MINS</p>
+                <div class="image">
+                    <img src="assets/Mask group.svg" alt="">
                 </div>
             </div>
-            <div class="r1 r3">
-                <h1>Tacos</h1>
-                <div class="time">
-                    <img src="assets/Clock.svg" alt="">
-                    <p>25-30 MINS</p>
+        </header>
+        <main>
+            <div class="searchbar">
+                <input type="search" class="search" placeholder=" Search by Recipes ">
+            </div>
+            <div class="buttons">
+                <a href="#" class="breakfast">Breakfast</a>
+                <a href="#">Lunch</a>
+                <a href="#">Dinner</a>
+                <a href="#">Desserts</a>
+            </div>
+            <div class="recipes">
+                <a class="anchor" href="omlette.html">
+                    <div class="r1">
+                    
+                    <h1>Egg Omelette</h1>
+                    <div class="time">
+                        <img src="assets/Clock.svg" alt="">
+                        <p>5-8 MINS</p>
+                    </div></a>
+                </div>
+                <div class="r1 r2">
+                    <h1>Pancakes</h1>
+                    <div class="time">
+                        <img src="assets/Clock.svg" alt="">
+                        <p>15-20 MINS</p>
+                    </div>
+                </div>
+                <div class="r1 r3">
+                    <h1>Tacos</h1>
+                    <div class="time">
+                        <img src="assets/Clock.svg" alt="">
+                        <p>25-30 MINS</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </main>
-</body>
+        </main>
+    </body>
 </html>
