New section of pancakes food section added

--- a/main-page.html
+++ b/main-page.html
@@ -32,19 +32,21 @@
             <div class="recipes">
                 <a class="anchor" href="omlette.html">
                     <div class="r1">
-                    
-                    <h1>Egg Omelette</h1>
-                    <div class="time">
-                        <img src="assets/Clock.svg" alt="">
-                        <p>5-8 MINS</p>
-                    </div></a>
+                        <h1>Egg Omelette</h1>
+                        <div class="time">
+                            <img src="assets/Clock.svg" alt="">
+                            <p>5-8 MINS</p>
+                        </div>
+                    </a>
                 </div>
-                <div class="r1 r2">
-                    <h1>Pancakes</h1>
-                    <div class="time">
-                        <img src="assets/Clock.svg" alt="">
-                        <p>15-20 MINS</p>
-                    </div>
+                <a class="anchor" href="pancakes.html">
+                    <div class="r1 r2">
+                        <h1>Pancakes</h1>
+                        <div class="time">
+                            <img src="assets/Clock.svg" alt="">
+                            <p>15-20 MINS</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="r1 r3">
                     <h1>Tacos</h1>
