Tacos section added

--- a/main-page.html
+++ b/main-page.html
@@ -34,7 +34,7 @@
                     <div class="r1">
                         <h1>Egg Omelette</h1>
                         <div class="time">
-                            <img src="assets/Clock.svg" alt="">
+                            <img src="assets/Clock.svg" alt="Omelette">
                             <p>5-8 MINS</p>
                         </div>
                     </a>
@@ -43,19 +43,22 @@
                     <div class="r1 r2">
                         <h1>Pancakes</h1>
                         <div class="time">
-                            <img src="assets/Clock.svg" alt="">
+                            <img src="assets/Clock.svg" alt="Pancakes">
                             <p>15-20 MINS</p>
                         </div>
                     </a>
                 </div>
-                <div class="r1 r3">
-                    <h1>Tacos</h1>
-                    <div class="time">
-                        <img src="assets/Clock.svg" alt="">
-                        <p>25-30 MINS</p>
-                    </div>
+                <a class="anchor" href="tacos.html">
+                    <div class="r1 r3">
+                        <h1>Tacos</h1>
+                        <div class="time">
+                            <img src="assets/Clock.svg" alt="Tacos">
+                            <p>25-30 MINS</p>
+                        </div>
+                    </a>
                 </div>
             </div>
-        </main>
-    </body>
+        </div>
+    </main>
+</body>
 </html>
